--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
         <title>Time Series Visualization-Covid19</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
         <script src="./plugin/d3/d3.min.js"></script>
         <script src="./plugin/projection/d3-geo-projection.min.js"></script>
+        <script src="./js/jquery.3.4.1.min.js"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
+        
     </head>
     <body>
-    <div id="container">        
-    </div>
-    <script src="./js/main.js"></script>
+        <div id="slider">
+
+        </div>        
+        <div id="first_map"></div>
+        <div id="sec_map"></div>
+        <script src="./js/main.js"></script>
     </body>
 </html>
